# MarketTrace

./: .gitignore  PROJECT_STATUS.md  README.md  docker-compose.yml  render.yaml  stock-analysis-system-blueprint.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/.omc/sessions/: 3d681fed-f46c-422e-83da-48d8d95a56ba.json
backend/.omc/state/: agent-replay-c81e0e41-1516-451b-9b34-84caef839b7c.jsonl  hud-stdin-cache.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_phase3_sector_event_impacts.py  0003_macro_observations.py  0004_ledger_statements.py  0005_passbook_statements.py  0006_event_review.py  (+5 more)
backend/eval_data/: goldset.seed.json  live_sample.labeled.json
backend/tests/: conftest.py  test_admin_api.py  test_api.py  test_auth.py  test_backtest.py  test_caching_provider.py  test_calibration.py  test_config.py  test_disclosure_contract.py  test_drawdown.py  test_entity_linker.py  test_eval_harness.py  test_eval_live.py  test_eval_metrics.py  test_eval_taxonomy.py  test_event_extractor.py  test_event_impacts.py  test_events_admin.py  test_ingest.py  test_ingest_api.py  test_instrument_ranking.py  test_instruments_list.py  test_kr_naver.py  test_ledger.py  test_ledger_customization.py  test_macro_ingest.py  test_macro_provider_contract.py  test_macro_surprise.py  test_models_smoke.py  test_novelty.py  test_opendart.py  test_passbook.py  test_price_refresh.py  test_rebound_backtest.py  test_reextract.py  test_registry.py  test_resolvers.py  test_returns.py  test_sec_edgar.py  test_sector_index.py  (+7 more)
(+178 files in other folders)
