[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "markettrace"
version = "0.1.0"
description = "Stock event-analysis system: disclosures -> structured events -> abnormal returns"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic",
    "psycopg[binary]",
    "pydantic>=2",
    "pydantic-settings",
    "httpx",
    "polars",
    "pypdf",
    "PyMuPDF",
    "python-multipart",
    "anthropic",
    "openai",
    "fastapi",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[project.scripts]
markettrace-slice = "markettrace.pipeline.vertical_slice:main"
markettrace-seed = "markettrace.pipeline.seed:main"
markettrace-eval = "markettrace.eval.harness:main"
markettrace-macro = "markettrace.pipeline.macro_ingest:main"
markettrace-ingest = "markettrace.api.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Depends(...) in argument defaults is the canonical FastAPI idiom.
"src/markettrace/api/*" = ["B008"]
# Long lines in tests (descriptive method names, fixture signatures) are fine.
"tests/*" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
